# financial-calc

./: .pre-commit-config.yaml  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: config.yaml
financial_calc/: __init__.py
financial_calc/financial_math/: __init__.py
financial_calc/interest_rates/: __init__.py
financial_math/: financial_math.py
interest_rates/: interest_rates.py
src/financial_math/: financial_math.py
src/interest_rates/: interest_rates.py
tests/: test_financial_math.py  test_interest_rates.py
