[project]
name = "financial-calc"
version = "0.1.0"
description = ""
authors = [
    {name = "vitorbeltrao300@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy-financial (>=1.0.0,<2.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
