[project]
name = "financial_calc"
version = "0.1.1"
description = ""
authors = [
    {name = "vitorbeltrao300@gmail.com"}
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
dependencies = [
    "numpy-financial (>=1.0.0,<2.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pre-commit (>=4.4.0,<5.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "twine (>=6.2.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
